[package]
edition      = "2021"
name         = "cheese_test"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "cheese_test"
path = "./src/bin/main.rs"

[dependencies]
defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32"] }
esp-hal                = { version = "=1.0.0-rc.0", features = ["defmt", "esp32", "unstable"] }

critical-section = "1.2.0"
esp-alloc        = { version = "0.8.0", features = ["defmt"] }
esp-println      = { version = "0.15.0", features = ["defmt-espflash", "esp32"] }
ssd1306 = "0.10.0"
mousefood = { git = "https://github.com/j-g00da/mousefood", rev = "1028ac24f83920fd95a5585a85ef943901ee63ac" }
ratatui = { version = "0.30.0-alpha.5", default-features = false }
embedded-dht-rs = { version = "0.5.0", features = ["dht11"] }
heapless = "0.9.1"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
